# personal-brain

./: .env.example  .gitignore  DEMO_DATA_POLICY.md  README.md  SECURITY.md  brain.py  config.example.json  pyproject.toml
.github/workflows/: ci.yml
demo/: offline_demo.py
demo/fixtures/: synthetic_memories.json
docs/: architecture.md  security-boundary.md
personal_brain/: __init__.py  answer.py  ask_debug.py  brain.py  config.py  daily_report.py  extractor.py  input_router.py  llm.py  memory_ops.py  memory_view.py  reviewer.py  router.py  schema.py  semantic.py  vault.py
scripts/adapters/: feishu_bridge.py
scripts/security/: backup_sqlite.py  capture_worktree.py  check_public_paths.py  private_output.py  redacted_secret_scan.py  verify_sqlite_backup.py
tests/: test_offline_demo.py
tests/reliability/: test_reliability.py  test_reliability_r2.py
tests/security/: test_security_tools.py
