[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-first-personal-brain"
version = "0.1.0"
description = "A local-first personal memory system with traceable evidence retrieval."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "chai11w" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools]
packages = ["personal_brain"]
